--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "h4x0r42/compex",
     "description": "This is indeed a dependency",
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.2"
     }
 }
